--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         -->
         <script>
             // URL của ứng dụng OpenCut đã được host
-            const hostedUrl = "https://lcttx-172-212-163-226.a.free.pinggy.link/";
+            const hostedUrl = "https://jane-packing-cleanup-tells.trycloudflare.com/";
             
             // Tự động chuyển hướng sau 3 giây (3000ms)
             setTimeout(() => {
@@ -50,8 +50,8 @@
         <p class="text-sm text-gray-400">
             Nếu bạn không được chuyển hướng, vui lòng bấm vào liên kết sau:
             <br>
-            <a href="https://lcttx-172-212-163-226.a.free.pinggy.link/" class="text-blue-500 hover:underline font-medium mt-2 block">
-                https://lcttx-172-212-163-226.a.free.pinggy.link/
+            <a href="https://jane-packing-cleanup-tells.trycloudflare.com/" class="text-blue-500 hover:underline font-medium mt-2 block">
+                https://jane-packing-cleanup-tells.trycloudflare.com/
             </a>
         </p>
     </div>
